--- a/frontend/src/app/features/home/newsletter-signup/newsletter-signup.component.html
+++ b/frontend/src/app/features/home/newsletter-signup/newsletter-signup.component.html
@@ -2,7 +2,7 @@
   <h2>Subscribe to our Newsletter</h2>
   <p>Stay updated with our latest offers and products. Sign up for our newsletter now!</p>
   <form (ngSubmit)="onSubmit()" #newsletterForm="ngForm">
-    <input type="email" name="email" [(ngModel)]="email" required placeholder="Enter your email" />
+    <input type="email" name="email" [(ngModel)]="email" required placeholder="Enter your email" autocomplete="off"/>
     <button type="submit" [disabled]="!newsletterForm.form.valid">Subscribe</button>
   </form>
   <p *ngIf="submitted" class="success-message">Thank you for subscribing!</p>
