--- a/frontend/src/app/shared/components/footer/footer.component.html
+++ b/frontend/src/app/shared/components/footer/footer.component.html
@@ -23,7 +23,7 @@
       <div class="footer-section contact-form">
         <h2>Contact Us</h2>
         <form>
-          <input type="text" name="email" placeholder="Your Email Address">
+          <input type="text" name="email" placeholder="Your Email Address" autocomplete="off">
           <textarea name="message" placeholder="Your Message"></textarea>
           <button type="submit" class="btn">Send</button>
         </form>
