--- a/frontend/src/app/features/product/single-product/single-product.component.css
+++ b/frontend/src/app/features/product/single-product/single-product.component.css
@@ -9,6 +9,32 @@
   background-color: #f9f9f9;
 }
 
+.error-container {
+  z-index: 999;
+  position: fixed;
+  max-width: 300px;
+  top: 70px;
+  right: 45px;
+  background-color: #f8d7da;
+  color: #721c24;
+  padding: 10px;
+  border: 1px solid #f5c6cb;
+  border-radius: 5px;
+}
+
+.success-container {
+  z-index: 999;
+  position: fixed;
+  max-width: 300px;
+  top: 70px;
+  right: 45px;
+  background-color: #d4edda;
+  color: #155724;
+  padding: 10px;
+  border: 1px solid #c3e6cb;
+  border-radius: 5px;
+}
+
 /* Product Info Section */
 .product-info {
   display: flex;
