--- a/frontend/src/app/features/user-dashboard/user-top-bar/user-top-bar.component.html
+++ b/frontend/src/app/features/user-dashboard/user-top-bar/user-top-bar.component.html
@@ -1,8 +1,8 @@
 <div class="topbar">
   <div class="navBar">
     <div class="search-bar">
-        <input type="text" placeholder="search">
-        <button><img src="../../../icons/search_24dp_FILL0_wght400_GRAD0_opsz24.png" alt=""></button>
+        <input type="text" placeholder="search" [(ngModel)]="searchTerm" (input)="searchProducts()">
+        <button (click)="searchProducts()"><img src="../../../icons/search_24dp_FILL0_wght400_GRAD0_opsz24.png" alt=""></button>
     </div>
     <div class="user-actions">
         <a href="">Home</a>
