--- a/frontend/src/app/features/admin-dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/admin-dashboard/dashboard/dashboard.component.html
@@ -4,19 +4,19 @@
      <div class="product-card">
       <i class="fa fa-cart-plus" aria-hidden="true"></i>
       <p>Total Products</p>
-       <h2>100</h2>
+       <h2>{{productCount}}</h2>
      </div>
 
      <div class="customer-card">
       <i class="fa fa-users" aria-hidden="true"></i>
       <p>Total Customers</p>
-       <h2>100</h2>
+       <h2>{{userCount}}</h2>
      </div>
 
      <div class="order-card">
       <i class="fa fa-money" aria-hidden="true"></i>
       <p>Total Orders</p>
-       <h2>100</h2>
+       <h2>{{orderCount}}</h2>
      </div>
 
      <!-- <div class="sale-card">
