--- a/frontend/src/app/features/admin-dashboard/admin-logout/admin-logout.component.html
+++ b/frontend/src/app/features/admin-dashboard/admin-logout/admin-logout.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 <p>Are you sure you want to logout?</p>
 <div class="btns">
-  <button class="acceptBtn" routerLink="login">Yes</button>
-  <button class="denyBtn">No</button>
+  <button class="acceptBtn" (click)="logout()">Yes</button>
+  <button class="denyBtn" (click)="cancel()">No</button>
 </div>
 </div>
