--- a/frontend/src/app/features/admin-dashboard/admin-profile/admin-profile.component.html
+++ b/frontend/src/app/features/admin-dashboard/admin-profile/admin-profile.component.html
@@ -1,16 +1,39 @@
 <div class="container">
-  <h2>Hey <span>{{details?.username}}</span> 👋, here is your profile details</h2>
+  <h2>Hey <span>{{details.username}}</span> 👋, here are your profile details</h2>
   <div class="profile">
-
     <img src="/assets/images/profileImg.jpg" alt="profile image" class="profileImg">
     <div class="content">
-    <h4>Name</h4>
-   <p>{{details?.username}}</p>
-    <h4>Email</h4>
-    <p>{{details?.email}}</p>
-    <h4>Phone Number</h4>
-    <p>{{details?.phone_number}}</p>
-    <button (click)="showUpdateModal()">Edit Profile</button>
+      <h4>Name</h4>
+      <p>{{details.username}}</p>
+      <h4>Email</h4>
+      <p>{{details.email}}</p>
+      <h4>Phone Number</h4>
+      <p>{{details.phone_number}}</p>
+      <button (click)="openUpdateModal()">Edit Profile</button>
+    </div>
   </div>
+
+  <div *ngIf="updateMsg" style="color: rgb(2, 150, 59);background-color: rgb(214, 248, 237); text-align: center; padding: 5px;border-radius: 5px; margin-top: 20px;">{{updateSuccessMessage}}</div>
+</div>
+
+
+<!-- Update User Modal -->
+<div class="modal" *ngIf="showUpdateModal">
+  <div class="modal-content">
+    <i class="fa fa-times close" (click)="closeUpdateModal()" aria-hidden="true"></i>
+    <form (ngSubmit)="updateUser()">
+      <label for="name">Name:</label>
+      <input type="text" id="name" [(ngModel)]="details.username" name="name">
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" [(ngModel)]="details.email" name="email">
+
+      <label for="mobile">Mobile:</label>
+      <input type="text" id="mobile" [(ngModel)]="details.phone_number" name="mobile">
+
+      <button type="submit">Update</button>
+    </form>
+
+
   </div>
 </div>
