--- a/frontend/src/app/features/admin-dashboard/product-management/product-management.component.css
+++ b/frontend/src/app/features/admin-dashboard/product-management/product-management.component.css
@@ -11,6 +11,18 @@
   font-size: 40px;
 }
 
+.searchForm input{
+
+    float: right;
+    width: 300px;
+    border-radius: 5px;
+    border: none;
+    margin: 10px 0px;
+    padding: 10px;
+  }
+  input:focus{
+    outline: none;
+  }
 .table-container{
   margin-top: 10px;
 }
