--- a/frontend/src/app/features/admin-dashboard/product-management/product-management.component.html
+++ b/frontend/src/app/features/admin-dashboard/product-management/product-management.component.html
@@ -6,7 +6,10 @@
     <i class="fa fa-plus-square addBtn" aria-hidden="true" (click)="showAddModal = true"></i>
     <div *ngIf="updateMsg" class="success">{{ updateSuccessMessage }}</div>
     <div *ngIf="deleteMsg" class="success">{{ deleteSuccessMessage }}</div>
-    <input type="text" placeholder="Filter products">
+
+    <div class="searchForm">
+      <input type="search" [(ngModel)]= "searchString" id="searchInput" placeholder="Filter products">
+    </div>
   </div>
 
   <!-- Add Product Modal -->
@@ -52,7 +55,7 @@
 
           <div class="mb-5">
             <label for="images">Images</label>
-            <input type="file" (change)="getImagesUrl($event)" name="images" />
+            <input type="file" (change)="getImagesUrl($event)" formControlName="image_url" />
             <span class="mt-2" *ngIf="isLoading">
               <div role="status">
                 <span class="sr-only">Loading...</span>
@@ -78,7 +81,7 @@
         </tr>
       </thead>
       <tbody *ngIf="paginatedProducts.length > 0">
-        <tr *ngFor="let product of paginatedProducts; let i = index">
+        <tr *ngFor="let product of paginatedProducts | productSearch:searchString; let i = index">
           <td>{{ product.name }}</td>
           <td>{{ product.price }}</td>
           <td>{{ product.category?.name }}</td>
