--- a/frontend/src/app/features/admin-dashboard/user-management/user-management.component.html
+++ b/frontend/src/app/features/admin-dashboard/user-management/user-management.component.html
@@ -1,27 +1,21 @@
 <div>
-  <input type="text" placeholder="Filter customers" >
+  <input type="text" placeholder="Filter customers" [(ngModel)]="searchString" >
   <table >
     <thead>
       <tr>
-
         <th>Name</th>
         <th>Email</th>
         <th>Phone Number</th>
-        <th>Actions</th>
+
       </tr>
     </thead>
     <tbody *ngIf="users.length>0">
-      <tr *ngFor="let user of users">
+      <tr *ngFor="let user of users | userSearch:searchString">
         <td>{{user.username}}</td>
         <td>{{user.email}}</td>
         <td>{{user.phone_number}}</td>
         <td>
-          <div class="actions">
 
-            <i class="fa fa-eye view" aria-hidden="true" ></i>
-            <!-- <i class="fa fa-pencil-square-o edit" aria-hidden="true" ></i>
-            <i class="fa fa-trash-o delete" aria-hidden="true"></i> -->
-          </div>
         </td>
       </tr>
     </tbody>
