--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,8 +5,8 @@
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
+  background-color: #000000;
+  font-family: sans-serif;
   /* display: flex; */
   /* flex-direction: column; */
   /* align-items: center; */
