--- a/frontend/src/app/features/home/categories/categories.component.html
+++ b/frontend/src/app/features/home/categories/categories.component.html
@@ -5,8 +5,8 @@
   <div class="category-grid">
     <div class="category-card" *ngFor="let category of categories">
       <div class="category-image">
-        <!-- <img [src]="category.image_url" alt="{{ category.name }}"> -->
-        <img [src]="getImageUrl(category.image_url)" alt="{{ category.name }}" />
+        <img [src]="category.image_url" alt="{{ category.name }}">
+        <!-- <img [src]="getImageUrl(category.image_url)" alt="{{ category.name }}" /> -->
       </div>
       <div class="category-info">
         <h3>{{ category.name }}</h3>
