--- a/frontend/src/app/features/home/featured-products/featured-products.component.html
+++ b/frontend/src/app/features/home/featured-products/featured-products.component.html
@@ -4,8 +4,8 @@
   <h2>Featured Products</h2>
   <div class="product-grid">
     <div class="product-card" *ngFor="let product of featuredProducts">
-      <!-- <img [src]="product.image" alt="{{ product.name }}"> -->
-      <img src="/product_placeholder.svg" alt="{{ product.name }}">
+      <img [src]="product.images[0].url" alt="{{ product.name }}">
+      <!-- <img src="/product_placeholder.svg" alt="{{ product.name }}"> -->
       <div class="product-info">
         <h3>{{ product.name }}</h3>
         <p class="price">${{ product.price }}</p>
