--- a/frontend/src/app/features/product/product-list/product-list.component.html
+++ b/frontend/src/app/features/product/product-list/product-list.component.html
@@ -18,8 +18,8 @@
   <div class="product-grid">
     <div class="product-card" *ngFor="let product of paginatedProducts" (click)="viewProduct(product.id || '')">
       <div class="product-img">
-        <!--! <img [src]="product.images[0].url" alt="{{ product.name }}"> -->
-        <img src="/product_placeholder.svg" alt="{{ product.name }}">
+        <img [src]="product.images[0].url" alt="{{ product.name }}">
+        <!-- <img src="/product_placeholder.svg" alt="{{ product.name }}"> -->
       </div>
       <div class="product-details">
         <h3>{{ product.name }}</h3>
