--- a/frontend/src/app/features/user-dashboard/user-sidebar/user-sidebar.component.html
+++ b/frontend/src/app/features/user-dashboard/user-sidebar/user-sidebar.component.html
@@ -28,7 +28,7 @@
           <img src="../../../icons/production_quantity_limits_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="">
           <p>  Products</p>
       </div>
-      <div class="cart" routerLink="cart">
+      <div class="cart" routerLink="carts">
         <img src="../../../icons/add_shopping_cart_24dp.svg" alt="">
         <p>Cart</p>
       </div>
