--- a/frontend/src/app/features/user-dashboard/user-logout/user-logout.component.html
+++ b/frontend/src/app/features/user-dashboard/user-logout/user-logout.component.html
@@ -1,1 +1,11 @@
-<p>user-logout works!</p>
+<div class = 'logout'>
+    <div class = 'logoutDiv'>
+        <div class = 'message'>
+            <h2>Are you sure you want to log out?</h2>
+        </div>
+        <div class = 'confirmation'>
+            <button class="yes" (click)="loginMethod()">YES</button>
+            <button class="no" (click)="toProduct()">NO</button>
+        </div>
+    </div>
+</div>
