--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #000000;
+  /* background-color: #000000; */
   font-family: sans-serif;
   /* display: flex; */
   /* flex-direction: column; */
