--- a/frontend/src/app/features/home/home.component.html
+++ b/frontend/src/app/features/home/home.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<!-- <app-hero></app-hero> -->
+<app-hero></app-hero>
 <app-featured-products></app-featured-products>
 <app-categories></app-categories>
 <app-special-offers></app-special-offers>
