--- a/frontend/src/app/features/cart-item/cart-item.component.html
+++ b/frontend/src/app/features/cart-item/cart-item.component.html
@@ -18,14 +18,12 @@
     </thead>
     <tbody>
       <tr *ngFor="let item of cartItems">
-        <!-- <td><img [src]="item.product?.images[0].url" alt="{{ item.product?.name }}"></td> -->
-        <td><img src="/product_placeholder.svg" alt="{{ item.product?.name }}"></td>
+        <td><img [src]="item.product?.images?.[0]?.url ?? 'product_placeholder.svg'" [alt]="item.product?.name ?? 'default-alt-text'"></td>
         <td>{{ item.product?.name }}</td>
         <td>
           <input type="number" [(ngModel)]="item.quantity" (change)="updateQuantity(item.id || '', item)" min="1">
         </td>
         <td>${{ item.product?.price }}</td>
-        <!-- <td>${{ item.subtotal }}</td> -->
         <td>${{ (item.product?.price ?? 0) * (item.quantity ?? 0) }}</td>
         <td>
           <button (click)="removeFromCart(item.id || '')">Remove</button>
