--- a/frontend/src/app/features/home/featured-products/featured-products.component.css
+++ b/frontend/src/app/features/home/featured-products/featured-products.component.css
@@ -63,6 +63,10 @@
 }
 
 .product-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 15px;
   padding: 15px;
   text-align: left;
 }
@@ -70,13 +74,22 @@
 .product-info h3 {
   color: #333;
   font-size: 20px;
-  margin-bottom: 10px;
+}
+
+.product-info .rating {
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+}
+
+.product-info .rating .fa {
+  font-size: 20px;
+  color: #FFD700;
 }
 
 .product-info .price {
   color: #6a0dad;
   font-size: 18px;
-  margin-bottom: 10px;
 }
 
 .product-info .btn {
