--- a/frontend/src/app/features/home/hero/hero.component.html
+++ b/frontend/src/app/features/home/hero/hero.component.html
@@ -1,12 +1,8 @@
-<div class="hero-carousel">
-  <div class="carousel-slide" *ngFor="let slide of slides; let i = index" [class.active]="i === currentSlide">
-    <div class="carousel-content">
-      <h2>{{ slide.title }}</h2>
-      <p>{{ slide.description }}</p>
-    </div>
-    <div class="carousel-image">
-      <img [src]="slide.image" alt="Slide Image">
-    </div>
+<div class="hero-carousel" [style.background-image]="'url(' + slides[currentSlide].image + ')'">
+  <div class="carousel-content">
+    <h1>{{ staticContent.title }}</h1>
+    <h3>{{ staticContent.tag }}</h3>
+    <p>{{ staticContent.description }}</p>
   </div>
   <button class="carousel-control prev" (click)="prevSlide()">&#10094;</button>
   <button class="carousel-control next" (click)="nextSlide()">&#10095;</button>
