--- a/frontend/src/app/features/home/new-arrivals/new-arrivals.component.html
+++ b/frontend/src/app/features/home/new-arrivals/new-arrivals.component.html
@@ -11,6 +11,12 @@
       </div>
       <div class="arrival-info">
         <h3>{{ product.name }}</h3>
+        <div class="rating">
+          <ng-container *ngFor="let star of getRatingArray(product.rating || 0); let i = index">
+            <i class="fa" [ngClass]="star"></i>
+          </ng-container>
+          <p>({{ product.no_of_reviews }})</p>
+        </div>
         <p class="price">${{ product.price }}</p>
         <button class="btn" (click)="addToCart($event, product.id || '')">Add to Cart</button>
       </div>
