--- a/frontend/src/app/features/home/special-offers/special-offers.component.css
+++ b/frontend/src/app/features/home/special-offers/special-offers.component.css
@@ -76,6 +76,10 @@
 }
 
 .offer-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 15px;
   padding: 15px;
   text-align: left;
 }
@@ -83,19 +87,27 @@
 .offer-info h3 {
   color: #333;
   font-size: 20px;
-  margin-bottom: 10px;
 }
 
 .offer-info p {
   color: #555;
   font-size: 16px;
-  margin-bottom: 10px;
+}
+
+.offer-info .rating {
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+}
+
+.offer-info .rating .fa {
+  font-size: 20px;
+  color: #FFD700;
 }
 
 .offer-info .price {
   color: #6a0dad;
   font-size: 18px;
-  margin-bottom: 10px;
 }
 
 .offer-info .btn {
