--- a/frontend/src/app/features/product/product-list/product-list.component.html
+++ b/frontend/src/app/features/product/product-list/product-list.component.html
@@ -23,7 +23,12 @@
       </div>
       <div class="product-details">
         <h3>{{ product.name }}</h3>
-        <p>{{ product.description }}</p>
+        <div class="rating">
+          <ng-container *ngFor="let star of getRatingArray(product.rating || 0); let i = index">
+            <i class="fa" [ngClass]="star"></i>
+          </ng-container>
+          <p>({{ product.no_of_reviews }})</p>
+        </div>
         <p class="price">${{ product.price }}</p>
         <p>{{ product.stock_quantity !== 0 ? 'in stock' : 'out of stock' }}</p>
       </div>
