--- a/frontend/src/app/shared/components/header/header.component.css
+++ b/frontend/src/app/shared/components/header/header.component.css
@@ -18,6 +18,8 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  gap: 30px;
+  padding: 7.5px 30px;
 }
 
 .logo a {
@@ -31,7 +33,6 @@
   display: flex;
   flex-wrap: wrap;
   gap: 15px;
-  margin-left: 20px;
 }
 
 .nav-menu a {
@@ -49,7 +50,6 @@
   flex: 1;
   display: flex;
   justify-content: center;
-  margin: 10px 0;
 }
 
 .search-bar input {
@@ -64,8 +64,8 @@
 .user-actions {
   display: flex;
   align-items: center;
-  gap: 10px;
-  margin-left: auto;
+  justify-content: center;
+  gap: 15px;
 }
 
 .user-actions .btn {
@@ -83,18 +83,19 @@
 }
 
 .cart-icon {
-  position: relative;
+  /* position: relative; */
+  font-size: 16px;
 }
 
 .cart-icon .cart-count {
-  position: absolute;
-  top: -10px;
-  right: -10px;
+  /* position: absolute; */
+  /* top: -10px; */
+  /* right: -10px; */
   background-color: red;
   color: #ffffff;
   border-radius: 50%;
   padding: 5px 10px;
-  font-size: 12px;
+  /* font-size: 10px; */
 }
 
 /* Responsive Styles */
